--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -8,9 +8,16 @@ server.error.include-message=always
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/airport-kh
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=11235813
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
+spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
+
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+
+spring.flyway.baseline-on-migrate=true
