--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -14,6 +14,15 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.cache.infinispan.cfg=org/infinispan/hibernate/cache/commons/builder/infinispan-configs-local.xml
+spring.jpa.properties.hibernate.cache.region.factory_class=infinispan
+
+spring.jpa.properties.hibernate.cache.infinispan.entity.expiration.max_idle=30000
+
+
 spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
 
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
