18 - Spring AOP a gyakorlatban (+ Address entitas miatti LazyInit javitas a Search Flight metodusban)

--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.open-in-view=false
 
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
-spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.cache.infinispan.cfg=org/infinispan/hibernate/cache/commons/builder/infinispan-configs-local.xml
 spring.jpa.properties.hibernate.cache.region.factory_class=infinispan
 
