--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 
 spring.flyway.baseline-on-migrate=true
+
+spring.task.scheduling.pool.size=5
