--- a/airport/pom.xml
+++ b/airport/pom.xml
@@ -45,6 +45,11 @@
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-hibernate-cache-v53</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-spring5-embedded</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.flywaydb</groupId>
