--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -32,3 +32,5 @@ spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
 spring.flyway.baseline-on-migrate=true
 
 spring.task.scheduling.pool.size=5
+
+spring.cache.infinispan.config=classpath:infinispan.xml
