--- a/airport/pom.xml
+++ b/airport/pom.xml
@@ -36,6 +36,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-envers -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-envers</artifactId>
+			<!--<version>6.1.2.Final</version>-->
+		</dependency>
+
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
@@ -45,7 +52,7 @@
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-hibernate-cache-v53</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-spring5-embedded</artifactId>
