--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.flyway.baseline-on-migrate=true
 spring.task.scheduling.pool.size=5
 
 spring.cache.infinispan.config=classpath:infinispan.xml
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
