50 - Alkalmazas integralasa aszinkron uzenetsoron keresztul

--- a/airport/src/main/resources/application.properties
+++ b/airport/src/main/resources/application.properties
@@ -37,3 +37,5 @@ spring.cache.infinispan.config=classpath:infinispan.xml
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.jms.pub-sub-domain=true
